--- a/mongodb/docker-compose-mongodb.yml
+++ b/mongodb/docker-compose-mongodb.yml
@@ -1,8 +1,7 @@
-# Use root/example as user/password credentials
 version: "3.1"
-
+name: mongodb-local
 services:
-  mongo:
+  mongodb:
     image: mongo
     restart: always
     ports:
@@ -10,13 +9,13 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
-  # mongo-express:
-  #   image: mongo-express
-  # restart: always
-  # ports:
-  #   - 8081:8081
-  # environment:
-  #   ME_CONFIG_MONGODB_ADMINUSERNAME: root
-  #   ME_CONFIG_MONGODB_ADMINPASSWORD: root
-  #   ME_CONFIG_MONGODB_URL: mongodb://root:root@mongo:27017/
-  #   ME_CONFIG_BASICAUTH: false
+  mongo-express:
+    image: mongo-express
+  restart: always
+  ports:
+    - 8081:8081
+  environment:
+    ME_CONFIG_MONGODB_ADMINUSERNAME: root
+    ME_CONFIG_MONGODB_ADMINPASSWORD: root
+    ME_CONFIG_MONGODB_URL: mongodb://root:root@mongo:27017/
+    ME_CONFIG_BASICAUTH: false
